--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "hash-front-challange",
   "version": "1.0.0",
   "description": "Hash frontend test.",
-  "main": "index.js",
+  "private": true,
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "less": "^3.12.2"
+  },
+  "devDependencies": {
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
