--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "nightwatch": "node nightwatch.js"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "less": "^3.12.2"
+  },
+  "devDependencies": {
+    "chromedriver": "^84.0.1",
+    "nightwatch": "^1.3.7"
   }
 }
